--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "pug": "^2.0.3",
     "vue": "^2.5.17",
     "vuetify": "^1.3.0"
   },
